Khung suon he thong
Lúc code thì dựa theo khung nha @@

--- a/HealthCare/HealthCare/App.config
+++ b/HealthCare/HealthCare/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+ <appSettings>
+    <add key="HealthCare_ConnectionString" value="Data Source=HUYSINH-PC\SQLEXPRESS;Initial Catalog=SystemTrackingHealthDB;Integrated Security=True"/>
+  </appSettings>
 </configuration>
