--- a/HealthCare/HealthCare/HealthCare.csproj
+++ b/HealthCare/HealthCare/HealthCare.csproj
@@ -52,7 +52,10 @@
       <DependentUpon>BaiDang.cs</DependentUpon>
     </Compile>
     <Compile Include="BUS\BaiDangBUS.cs" />
+    <Compile Include="BUS\BenhBUS.cs" />
     <Compile Include="BUS\BenhNhanBUS.cs" />
+    <Compile Include="BUS\TrieuChungChanDoan.cs" />
+    <Compile Include="BUS\ViTriChanDoanBUS.cs" />
     <Compile Include="ChanDoan.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -61,8 +64,11 @@
     </Compile>
     <Compile Include="DAL\BacSiDAL.cs" />
     <Compile Include="DAL\BaiDangDAL.cs" />
+    <Compile Include="DAL\BenhDAL.cs" />
     <Compile Include="DAL\BenhNhanDAL.cs" />
     <Compile Include="DAL\DataHelper.cs" />
+    <Compile Include="DAL\TrieuChungChanDoanDAL.cs" />
+    <Compile Include="DAL\ViTriChanDoanDAL.cs" />
     <Compile Include="DangKy.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,9 +83,13 @@
     </Compile>
     <Compile Include="DTO\BacSi.cs" />
     <Compile Include="DTO\BaiDang.cs" />
+    <Compile Include="DTO\Benh.cs" />
     <Compile Include="DTO\BenhNhan.cs" />
     <Compile Include="DTO\DuLieuBenhAn.cs" />
     <Compile Include="DTO\NguoiDung.cs" />
+    <Compile Include="DTO\TrieuChungChanDoan.cs" />
+    <Compile Include="DTO\ViTriChanDoan.cs" />
+    <Compile Include="DTO\ViTriTrieuChung.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,9 +178,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GUI\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
