--- a/HealthCare/HealthCare/App.config
+++ b/HealthCare/HealthCare/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
  <appSettings>
-    <add key="HealthCare_ConnectionString" value="Data Source=HUYSINH-PC\SQLEXPRESS;Initial Catalog=SystemTrackingHealthDB;Integrated Security=True"/>
+    <add key="HealthCare_ConnectionString" value="Data Source=HUYSINH-PC\SQLEXPRESS;Initial Catalog=HealthCareDB;Integrated Security=True"/>
   </appSettings>
 </configuration>
