--- a/HealthCare/HealthCare/App.config
+++ b/HealthCare/HealthCare/App.config
@@ -1,7 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="HealthCare.Properties.Settings.HealthCare_ConnectionSring" connectionString="Data Source=TAIGUYEN\SQLEXPRESS;Initial Catalog=HealthCareData;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
  <appSettings>
     <add key="HealthCare_ConnectionString" value="Data Source=HUYSINH-PC\SQLEXPRESS;Initial Catalog=HealthCareDB;Integrated Security=True"/>
