--- a/HealthCare/HealthCare/App.config
+++ b/HealthCare/HealthCare/App.config
@@ -9,6 +9,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
  <appSettings>
-    <add key="HealthCare_ConnectionString" value="Data Source=HUYSINH-PC\SQLEXPRESS;Initial Catalog=HealthCareDB;Integrated Security=True"/>
+    <add key="HealthCare_ConnectionString" value="Data Source=HAI-INSPIRON\MSSQLEXPRESS;Initial Catalog=HealthCareDB;Integrated Security=True"/>
   </appSettings>
 </configuration>
